# snake_cli

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs
server/: Cargo.toml
server/src/: functions.rs  host.rs  lib.rs
src/: lib.rs  main.rs  model.rs
src/client/: user.rs
src/game/: init.rs  mod.rs  model.rs  snake.rs
src/server/: functions.rs  host.rs  init_host.rs  mod.rs
