[package]
name = "snakecli"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "client",
    "server",
    "common"
]
resolver = "3"

[dependencies]
clap = "4.5.41"
colored = "3.0.0"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
server = {path = "server"}
client = {path = "client"}
common = {path = "common"}

